2005-06-08  Sven Neumann  <sven@gimp.org>

	Removed "stingy-memory-use" all over the place. This feature was
	really not that useful anymore. The GUI for the preference option
	was already removed for GIMP 2.2.  Fixes bug #306617.

	* app/config/gimpbaseconfig.[ch]: set IGNORE flag on
	"stingy-memory-use".

	* app/config/gimpcoreconfig.h: added a comment that the
	font_path_writable variable is unused.

	* app/base/temp-buf.[ch]: removed code that used to deal with
	swapping temp-bufs to disk.

	* app/base/base.c: made base_config a static variable.
	
	* app/core/gimpdata.[ch]
	* app/core/gimpdatafactory.[ch]: removed stingy_memory_use
	parameter from data construction methods.

	* app/core/gimp-gradients.c
	* app/core/gimpbrush-load.[ch]
	* app/core/gimpbrush.[ch]
	* app/core/gimpbrushgenerated.[ch]
	* app/core/gimpbrushpipe.[ch]
	* app/core/gimpcontext.c
	* app/core/gimpgradient-load.[ch]
	* app/core/gimpgradient.[ch]
	* app/core/gimppalette-import.c
	* app/core/gimppalette.[ch]
	* app/core/gimppattern.[ch]: changed accordingly.

2005-06-05  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpaligntool.[ch]: improve layout of controls.  Add
	radio buttons allowing selection of reference layer without
	using Ctrl modifier.  Handle removal of target or reference
	layers from image more correctly.  More to come.
	
2005-06-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmp.c
	* plug-ins/bmp/bmpread.c
	* plug-ins/bmp/bmpwrite.c: applied a (slightly modified) patch
	contributed by Brandon that adds support for reading and writing
	RGBA BMP files (bug #306339).

2005-06-07  Manish Singh  <yosh@gimp.org>

	* app/base/cpu-accel.[ch]: detect SSE3.

2005-06-07  Manish Singh  <yosh@gimp.org>

	* app/actions/dockable-actions.c (dockable_actions_update): cast
	the result of gtk_bin_get_child ().

2005-06-06  Michael Natterer  <mitch@gimp.org>

	* app/actions/dockable-actions.c (dockable_toggle_actions): use
	'B' instead of 'S' as mnemonic for "Show Button Bar".
