@@ -1,5 +1,12 @@
 2005-06-08  Sven Neumann  <sven@gimp.org>
 
+	* app/config/gimprc-blurbs.h: removed blurbs for unused preferences.
+
+	* app/config/gimpbaseconfig.c
+	* app/config/gimpcoreconfig.c: changed accordingly.
+
+2005-06-08  Sven Neumann  <sven@gimp.org>
+
 	Removed "stingy-memory-use" all over the place. This feature was
 	really not that useful anymore. The GUI for the preference option
 	was already removed for GIMP 2.2.  Fixes bug #306617.
